@@ -309,5 +309,59 @@ along with YASW.  If not, see http://www.gnu.org/licenses/.
  <resources>
   <include location="icons/icons.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>addLeft</sender>
+   <signal>clicked()</signal>
+   <receiver>ImageTableWidget</receiver>
+   <slot>addLeft()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>22</x>
+     <y>306</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>118</x>
+     <y>207</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>addRight</sender>
+   <signal>clicked()</signal>
+   <receiver>ImageTableWidget</receiver>
+   <slot>addRight()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>187</x>
+     <y>302</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>185</x>
+     <y>357</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>remove</sender>
+   <signal>clicked()</signal>
+   <receiver>ImageTableWidget</receiver>
+   <slot>removeSelected()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>118</x>
+     <y>308</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>238</x>
+     <y>220</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>addLeft()</slot>
+  <slot>addRight()</slot>
+  <slot>removeSelected()</slot>
+ </slots>
 </ui>
